--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title><%= content_for(:title) || "Gossip Project" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,8 +26,34 @@
   </head>
 
   <body>
-    <%= yield %>
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to "Gossip Project", root_path, class: "navbar-brand fw-bold" %>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <%= link_to "Accueil", root_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Équipe", '/team', class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Contact", '/contact', class: "nav-link" %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
+
+    <main class="py-4">
+      <div class="container">
+        <%= yield %>
+      </div>
+    </main>
   </body>
 </html>
