--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,18 @@
 
     <main class="py-4">
       <div class="container">
+        <% if flash[:success] %>
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <%= flash[:success] %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+          </div>
+        <% end %>
+        <% if flash[:error] %>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%= flash[:error] %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+          </div>
+        <% end %>
         <%= yield %>
       </div>
     </main>
