--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,24 @@
               <li class="nav-item">
                 <%= link_to "Contact", '/contact', class: "nav-link" %>
               </li>
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to "Mon profil", user_path(current_user), class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Se déconnecter", session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+                </li>
+              <% else %>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    S'inscrire / Se connecter
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    <li><%= link_to "S'inscrire", new_user_path, class: "dropdown-item" %></li>
+                    <li><%= link_to "Se connecter", new_session_path, class: "dropdown-item" %></li>
+                  </ul>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
