--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,9 @@
 
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 class="mb-0">Tous les potins</h2>
-      <%= link_to "Creer un potin", new_gossip_path, class: "btn btn-success" %>
+      <% if user_signed_in? %>
+        <%= link_to "Creer un potin", new_gossip_path, class: "btn btn-success" %>
+      <% end %>
     </div>
 
     <% if @gossips.any? %>
